// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DocumentPendingLoans tests should load the details component 1`] = `
<Loader>
  <Error>
    <ResultsTable
      columns={
        Array [
          Object {
            "field": "metadata.pid",
            "formatter": [Function],
            "title": "Loan ID",
          },
          Object {
            "field": "metadata.patron.name",
            "formatter": [Function],
            "title": "Patron",
          },
          Object {
            "field": "metadata.request_start_date",
            "formatter": [Function],
            "title": "Request start date",
          },
          Object {
            "field": "metadata.request_expire_date",
            "formatter": [Function],
            "title": "Request end date",
          },
        ]
      }
      currentPage={1}
      data={Array []}
      headerActionComponent={null}
      name="pending loan requests"
      paginationComponent={null}
      seeAllComponent={
        <SeeAllButton
          disabled={false}
          fluid={false}
          to="/backoffice/loans?q=(document_pid:111 AND state:(PENDING))"
        />
      }
      showAllResults={false}
      showMaxRows={5}
      singleLine={false}
      subtitle=""
      title=""
      totalHitsCount={0}
    />
  </Error>
</Loader>
`;

exports[`DocumentPendingLoans tests should render pending loans 1`] = `
<DocumentPendingLoans
  documentDetails={
    Object {
      "metadata": Object {
        "item_pid": 222,
        "pid": 111,
      },
      "pid": 111,
    }
  }
  documentPendingLoans={
    Object {
      "hits": Array [
        Object {
          "id": 1,
          "metadata": Object {
            "document_pid": "docid-1",
            "end_date": "2018-07-28",
            "item_pid": Object {},
            "patron": Object {
              "email": "patron1@test.ch",
            },
            "patron_pid": "1",
            "pickup_location_pid": "1",
            "pid": "loanid-1",
            "request_expire_date": "2019-06-28",
            "request_start_date": "2018-06-28",
            "start_date": "2018-06-28",
            "state": "PENDING",
            "transaction_date": "2018-06-29",
            "transaction_location_pid": "1",
          },
          "pid": "loan1",
        },
        Object {
          "id": 2,
          "metadata": Object {
            "document_pid": "docid-1",
            "end_date": "2018-07-28",
            "item_pid": Object {
              "type": "pitmid",
              "value": "itemid-2",
            },
            "patron": Object {
              "email": "patron2@test.ch",
            },
            "patron_pid": "1",
            "pickup_location_pid": "1",
            "pid": "loanid-2",
            "request_expire_date": "2019-06-28",
            "request_start_date": "2018-06-28",
            "start_date": "2018-06-28",
            "state": "PENDING",
            "transaction_date": "2018-06-29",
            "transaction_location_pid": "1",
          },
          "pid": "loan2",
        },
      ],
      "total": 2,
    }
  }
  fetchPendingLoans={[Function]}
  showMaxPendingLoans={5}
>
  <Loader>
    <Error>
      <ResultsTable
        columns={
          Array [
            Object {
              "field": "metadata.pid",
              "formatter": [Function],
              "title": "Loan ID",
            },
            Object {
              "field": "metadata.patron.name",
              "formatter": [Function],
              "title": "Patron",
            },
            Object {
              "field": "metadata.request_start_date",
              "formatter": [Function],
              "title": "Request start date",
            },
            Object {
              "field": "metadata.request_expire_date",
              "formatter": [Function],
              "title": "Request end date",
            },
          ]
        }
        currentPage={1}
        data={
          Array [
            Object {
              "id": 1,
              "metadata": Object {
                "document_pid": "docid-1",
                "end_date": "2018-07-28",
                "item_pid": Object {},
                "patron": Object {
                  "email": "patron1@test.ch",
                },
                "patron_pid": "1",
                "pickup_location_pid": "1",
                "pid": "loanid-1",
                "request_expire_date": "2019-06-28",
                "request_start_date": "2018-06-28",
                "start_date": "2018-06-28",
                "state": "PENDING",
                "transaction_date": "2018-06-29",
                "transaction_location_pid": "1",
              },
              "pid": "loan1",
            },
            Object {
              "id": 2,
              "metadata": Object {
                "document_pid": "docid-1",
                "end_date": "2018-07-28",
                "item_pid": Object {
                  "type": "pitmid",
                  "value": "itemid-2",
                },
                "patron": Object {
                  "email": "patron2@test.ch",
                },
                "patron_pid": "1",
                "pickup_location_pid": "1",
                "pid": "loanid-2",
                "request_expire_date": "2019-06-28",
                "request_start_date": "2018-06-28",
                "start_date": "2018-06-28",
                "state": "PENDING",
                "transaction_date": "2018-06-29",
                "transaction_location_pid": "1",
              },
              "pid": "loan2",
            },
          ]
        }
        headerActionComponent={null}
        name="pending loan requests"
        paginationComponent={null}
        seeAllComponent={
          <SeeAllButton
            disabled={false}
            fluid={false}
            to="/backoffice/loans?q=(document_pid:111 AND state:(PENDING))"
          />
        }
        showAllResults={false}
        showMaxRows={5}
        singleLine={false}
        subtitle=""
        title=""
        totalHitsCount={2}
      >
        <Table
          as="table"
          compact={true}
          name="pending loan requests"
          selectable={true}
          striped={true}
          subtitle=""
          title=""
          unstackable={true}
        >
          <table
            className="ui selectable striped unstackable compact table"
            name="pending loan requests"
            subtitle=""
            title=""
          >
            <ResultsTableHeader
              columns={
                Array [
                  Object {
                    "field": "metadata.pid",
                    "formatter": [Function],
                    "title": "Loan ID",
                  },
                  Object {
                    "field": "metadata.patron.name",
                    "formatter": [Function],
                    "title": "Patron",
                  },
                  Object {
                    "field": "metadata.request_start_date",
                    "formatter": [Function],
                    "title": "Request start date",
                  },
                  Object {
                    "field": "metadata.request_expire_date",
                    "formatter": [Function],
                    "title": "Request end date",
                  },
                ]
              }
            >
              <TableHeader
                as="thead"
              >
                <thead
                  className=""
                >
                  <TableRow
                    as="tr"
                    cellAs="td"
                    data-test="header"
                  >
                    <tr
                      className=""
                      data-test="header"
                    >
                      <TableHeaderCell
                        as="th"
                        key="Loan ID"
                      >
                        <TableCell
                          as="th"
                          className=""
                        >
                          <th
                            className=""
                          >
                            Loan ID
                          </th>
                        </TableCell>
                      </TableHeaderCell>
                      <TableHeaderCell
                        as="th"
                        key="Patron"
                      >
                        <TableCell
                          as="th"
                          className=""
                        >
                          <th
                            className=""
                          >
                            Patron
                          </th>
                        </TableCell>
                      </TableHeaderCell>
                      <TableHeaderCell
                        as="th"
                        key="Request start date"
                      >
                        <TableCell
                          as="th"
                          className=""
                        >
                          <th
                            className=""
                          >
                            Request start date
                          </th>
                        </TableCell>
                      </TableHeaderCell>
                      <TableHeaderCell
                        as="th"
                        key="Request end date"
                      >
                        <TableCell
                          as="th"
                          className=""
                        >
                          <th
                            className=""
                          >
                            Request end date
                          </th>
                        </TableCell>
                      </TableHeaderCell>
                    </tr>
                  </TableRow>
                </thead>
              </TableHeader>
            </ResultsTableHeader>
            <ResultsTableBody
              columns={
                Array [
                  Object {
                    "field": "metadata.pid",
                    "formatter": [Function],
                    "title": "Loan ID",
                  },
                  Object {
                    "field": "metadata.patron.name",
                    "formatter": [Function],
                    "title": "Patron",
                  },
                  Object {
                    "field": "metadata.request_start_date",
                    "formatter": [Function],
                    "title": "Request start date",
                  },
                  Object {
                    "field": "metadata.request_expire_date",
                    "formatter": [Function],
                    "title": "Request end date",
                  },
                ]
              }
              rows={
                Array [
                  Object {
                    "id": 1,
                    "metadata": Object {
                      "document_pid": "docid-1",
                      "end_date": "2018-07-28",
                      "item_pid": Object {},
                      "patron": Object {
                        "email": "patron1@test.ch",
                      },
                      "patron_pid": "1",
                      "pickup_location_pid": "1",
                      "pid": "loanid-1",
                      "request_expire_date": "2019-06-28",
                      "request_start_date": "2018-06-28",
                      "start_date": "2018-06-28",
                      "state": "PENDING",
                      "transaction_date": "2018-06-29",
                      "transaction_location_pid": "1",
                    },
                    "pid": "loan1",
                  },
                  Object {
                    "id": 2,
                    "metadata": Object {
                      "document_pid": "docid-1",
                      "end_date": "2018-07-28",
                      "item_pid": Object {
                        "type": "pitmid",
                        "value": "itemid-2",
                      },
                      "patron": Object {
                        "email": "patron2@test.ch",
                      },
                      "patron_pid": "1",
                      "pickup_location_pid": "1",
                      "pid": "loanid-2",
                      "request_expire_date": "2019-06-28",
                      "request_start_date": "2018-06-28",
                      "start_date": "2018-06-28",
                      "state": "PENDING",
                      "transaction_date": "2018-06-29",
                      "transaction_location_pid": "1",
                    },
                    "pid": "loan2",
                  },
                ]
              }
            >
              <TableBody
                as="tbody"
              >
                <tbody
                  className=""
                >
                  <TableRow
                    as="tr"
                    cellAs="td"
                    data-test="loan1"
                    key="loan1"
                  >
                    <tr
                      className=""
                      data-test="loan1"
                    >
                      <TableCell
                        as="td"
                        data-label="Loan ID"
                        data-test="0-loan1"
                        key="0-loan1"
                      >
                        <td
                          className=""
                          data-label="Loan ID"
                          data-test="0-loan1"
                        >
                          <Link
                            data-test="loanid-1"
                            to="loan/loanid-1"
                          />
                        </td>
                      </TableCell>
                      <TableCell
                        as="td"
                        data-label="Patron"
                        data-test="1-loan1"
                        key="1-loan1"
                      >
                        <td
                          className=""
                          data-label="Patron"
                          data-test="1-loan1"
                        >
                          <Link
                            to="patron/1"
                          />
                        </td>
                      </TableCell>
                      <TableCell
                        as="td"
                        data-label="Request start date"
                        data-test="2-loan1"
                        key="2-loan1"
                      >
                        <td
                          className=""
                          data-label="Request start date"
                          data-test="2-loan1"
                        >
                          2018-06-28
                        </td>
                      </TableCell>
                      <TableCell
                        as="td"
                        data-label="Request end date"
                        data-test="3-loan1"
                        key="3-loan1"
                      >
                        <td
                          className=""
                          data-label="Request end date"
                          data-test="3-loan1"
                        >
                          2019-06-28
                        </td>
                      </TableCell>
                    </tr>
                  </TableRow>
                  <TableRow
                    as="tr"
                    cellAs="td"
                    data-test="loan2"
                    key="loan2"
                  >
                    <tr
                      className=""
                      data-test="loan2"
                    >
                      <TableCell
                        as="td"
                        data-label="Loan ID"
                        data-test="0-loan2"
                        key="0-loan2"
                      >
                        <td
                          className=""
                          data-label="Loan ID"
                          data-test="0-loan2"
                        >
                          <Link
                            data-test="loanid-2"
                            to="loan/loanid-2"
                          />
                        </td>
                      </TableCell>
                      <TableCell
                        as="td"
                        data-label="Patron"
                        data-test="1-loan2"
                        key="1-loan2"
                      >
                        <td
                          className=""
                          data-label="Patron"
                          data-test="1-loan2"
                        >
                          <Link
                            to="patron/1"
                          />
                        </td>
                      </TableCell>
                      <TableCell
                        as="td"
                        data-label="Request start date"
                        data-test="2-loan2"
                        key="2-loan2"
                      >
                        <td
                          className=""
                          data-label="Request start date"
                          data-test="2-loan2"
                        >
                          2018-06-28
                        </td>
                      </TableCell>
                      <TableCell
                        as="td"
                        data-label="Request end date"
                        data-test="3-loan2"
                        key="3-loan2"
                      >
                        <td
                          className=""
                          data-label="Request end date"
                          data-test="3-loan2"
                        >
                          2019-06-28
                        </td>
                      </TableCell>
                    </tr>
                  </TableRow>
                </tbody>
              </TableBody>
            </ResultsTableBody>
            <ResultsTableFooter
              allRowsNumber={2}
              columnsNumber={4}
              currentPage={1}
              paginationComponent={null}
              seeAllComponent={
                <SeeAllButton
                  disabled={false}
                  fluid={false}
                  to="/backoffice/loans?q=(document_pid:111 AND state:(PENDING))"
                />
              }
              showAllResults={false}
              showMaxRows={5}
            />
          </table>
        </Table>
      </ResultsTable>
    </Error>
  </Loader>
</DocumentPendingLoans>
`;

exports[`DocumentPendingLoans tests should render show a message with no pending loans 1`] = `
<DocumentPendingLoans
  documentDetails={
    Object {
      "metadata": Object {
        "item_pid": 222,
        "pid": 111,
      },
      "pid": 111,
    }
  }
  documentPendingLoans={
    Object {
      "hits": Array [],
      "total": 0,
    }
  }
  fetchPendingLoans={[Function]}
  showMaxPendingLoans={5}
>
  <Loader>
    <Error>
      <ResultsTable
        columns={
          Array [
            Object {
              "field": "metadata.pid",
              "formatter": [Function],
              "title": "Loan ID",
            },
            Object {
              "field": "metadata.patron.name",
              "formatter": [Function],
              "title": "Patron",
            },
            Object {
              "field": "metadata.request_start_date",
              "formatter": [Function],
              "title": "Request start date",
            },
            Object {
              "field": "metadata.request_expire_date",
              "formatter": [Function],
              "title": "Request end date",
            },
          ]
        }
        currentPage={1}
        data={Array []}
        headerActionComponent={null}
        name="pending loan requests"
        paginationComponent={null}
        seeAllComponent={
          <SeeAllButton
            disabled={false}
            fluid={false}
            to="/backoffice/loans?q=(document_pid:111 AND state:(PENDING))"
          />
        }
        showAllResults={false}
        showMaxRows={5}
        singleLine={false}
        subtitle=""
        title=""
        totalHitsCount={0}
      >
        <Message
          data-test="no-results"
          icon={true}
          info={true}
        >
          <div
            className="ui icon info message"
            data-test="no-results"
          >
            <MessageContent>
              <div
                className="content"
              >
                <MessageHeader>
                  <div
                    className="header"
                  >
                    No results found
                  </div>
                </MessageHeader>
                There are no 
                pending loan requests
                .
              </div>
            </MessageContent>
          </div>
        </Message>
      </ResultsTable>
    </Error>
  </Loader>
</DocumentPendingLoans>
`;

exports[`DocumentPendingLoans tests should render the see all button when showing only a few pending loans 1`] = `
<DocumentPendingLoans
  documentDetails={
    Object {
      "metadata": Object {
        "item_pid": 222,
        "pid": 111,
      },
      "pid": 111,
    }
  }
  documentPendingLoans={
    Object {
      "hits": Array [
        Object {
          "id": 1,
          "metadata": Object {
            "document_pid": "docid-1",
            "end_date": "2018-07-28",
            "item_pid": Object {},
            "patron": Object {
              "email": "patron1@test.ch",
            },
            "patron_pid": "1",
            "pickup_location_pid": "1",
            "pid": "loanid-1",
            "request_expire_date": "2019-06-28",
            "request_start_date": "2018-06-28",
            "start_date": "2018-06-28",
            "state": "PENDING",
            "transaction_date": "2018-06-29",
            "transaction_location_pid": "1",
          },
          "pid": "loan1",
        },
        Object {
          "id": 2,
          "metadata": Object {
            "document_pid": "docid-1",
            "end_date": "2018-07-28",
            "item_pid": Object {
              "type": "pitmid",
              "value": "itemid-2",
            },
            "patron": Object {
              "email": "patron2@test.ch",
            },
            "patron_pid": "1",
            "pickup_location_pid": "1",
            "pid": "loanid-2",
            "request_expire_date": "2019-06-28",
            "request_start_date": "2018-06-28",
            "start_date": "2018-06-28",
            "state": "PENDING",
            "transaction_date": "2018-06-29",
            "transaction_location_pid": "1",
          },
          "pid": "loan2",
        },
      ],
      "total": 2,
    }
  }
  fetchPendingLoans={[Function]}
  showMaxPendingLoans={1}
>
  <Loader>
    <Error>
      <ResultsTable
        columns={
          Array [
            Object {
              "field": "metadata.pid",
              "formatter": [Function],
              "title": "Loan ID",
            },
            Object {
              "field": "metadata.patron.name",
              "formatter": [Function],
              "title": "Patron",
            },
            Object {
              "field": "metadata.request_start_date",
              "formatter": [Function],
              "title": "Request start date",
            },
            Object {
              "field": "metadata.request_expire_date",
              "formatter": [Function],
              "title": "Request end date",
            },
          ]
        }
        currentPage={1}
        data={
          Array [
            Object {
              "id": 1,
              "metadata": Object {
                "document_pid": "docid-1",
                "end_date": "2018-07-28",
                "item_pid": Object {},
                "patron": Object {
                  "email": "patron1@test.ch",
                },
                "patron_pid": "1",
                "pickup_location_pid": "1",
                "pid": "loanid-1",
                "request_expire_date": "2019-06-28",
                "request_start_date": "2018-06-28",
                "start_date": "2018-06-28",
                "state": "PENDING",
                "transaction_date": "2018-06-29",
                "transaction_location_pid": "1",
              },
              "pid": "loan1",
            },
            Object {
              "id": 2,
              "metadata": Object {
                "document_pid": "docid-1",
                "end_date": "2018-07-28",
                "item_pid": Object {
                  "type": "pitmid",
                  "value": "itemid-2",
                },
                "patron": Object {
                  "email": "patron2@test.ch",
                },
                "patron_pid": "1",
                "pickup_location_pid": "1",
                "pid": "loanid-2",
                "request_expire_date": "2019-06-28",
                "request_start_date": "2018-06-28",
                "start_date": "2018-06-28",
                "state": "PENDING",
                "transaction_date": "2018-06-29",
                "transaction_location_pid": "1",
              },
              "pid": "loan2",
            },
          ]
        }
        headerActionComponent={null}
        name="pending loan requests"
        paginationComponent={null}
        seeAllComponent={
          <SeeAllButton
            disabled={false}
            fluid={false}
            to="/backoffice/loans?q=(document_pid:111 AND state:(PENDING))"
          />
        }
        showAllResults={false}
        showMaxRows={1}
        singleLine={false}
        subtitle=""
        title=""
        totalHitsCount={2}
      >
        <Table
          as="table"
          compact={true}
          name="pending loan requests"
          selectable={true}
          striped={true}
          subtitle=""
          title=""
          unstackable={true}
        >
          <table
            className="ui selectable striped unstackable compact table"
            name="pending loan requests"
            subtitle=""
            title=""
          >
            <ResultsTableHeader
              columns={
                Array [
                  Object {
                    "field": "metadata.pid",
                    "formatter": [Function],
                    "title": "Loan ID",
                  },
                  Object {
                    "field": "metadata.patron.name",
                    "formatter": [Function],
                    "title": "Patron",
                  },
                  Object {
                    "field": "metadata.request_start_date",
                    "formatter": [Function],
                    "title": "Request start date",
                  },
                  Object {
                    "field": "metadata.request_expire_date",
                    "formatter": [Function],
                    "title": "Request end date",
                  },
                ]
              }
            >
              <TableHeader
                as="thead"
              >
                <thead
                  className=""
                >
                  <TableRow
                    as="tr"
                    cellAs="td"
                    data-test="header"
                  >
                    <tr
                      className=""
                      data-test="header"
                    >
                      <TableHeaderCell
                        as="th"
                        key="Loan ID"
                      >
                        <TableCell
                          as="th"
                          className=""
                        >
                          <th
                            className=""
                          >
                            Loan ID
                          </th>
                        </TableCell>
                      </TableHeaderCell>
                      <TableHeaderCell
                        as="th"
                        key="Patron"
                      >
                        <TableCell
                          as="th"
                          className=""
                        >
                          <th
                            className=""
                          >
                            Patron
                          </th>
                        </TableCell>
                      </TableHeaderCell>
                      <TableHeaderCell
                        as="th"
                        key="Request start date"
                      >
                        <TableCell
                          as="th"
                          className=""
                        >
                          <th
                            className=""
                          >
                            Request start date
                          </th>
                        </TableCell>
                      </TableHeaderCell>
                      <TableHeaderCell
                        as="th"
                        key="Request end date"
                      >
                        <TableCell
                          as="th"
                          className=""
                        >
                          <th
                            className=""
                          >
                            Request end date
                          </th>
                        </TableCell>
                      </TableHeaderCell>
                    </tr>
                  </TableRow>
                </thead>
              </TableHeader>
            </ResultsTableHeader>
            <ResultsTableBody
              columns={
                Array [
                  Object {
                    "field": "metadata.pid",
                    "formatter": [Function],
                    "title": "Loan ID",
                  },
                  Object {
                    "field": "metadata.patron.name",
                    "formatter": [Function],
                    "title": "Patron",
                  },
                  Object {
                    "field": "metadata.request_start_date",
                    "formatter": [Function],
                    "title": "Request start date",
                  },
                  Object {
                    "field": "metadata.request_expire_date",
                    "formatter": [Function],
                    "title": "Request end date",
                  },
                ]
              }
              rows={
                Array [
                  Object {
                    "id": 1,
                    "metadata": Object {
                      "document_pid": "docid-1",
                      "end_date": "2018-07-28",
                      "item_pid": Object {},
                      "patron": Object {
                        "email": "patron1@test.ch",
                      },
                      "patron_pid": "1",
                      "pickup_location_pid": "1",
                      "pid": "loanid-1",
                      "request_expire_date": "2019-06-28",
                      "request_start_date": "2018-06-28",
                      "start_date": "2018-06-28",
                      "state": "PENDING",
                      "transaction_date": "2018-06-29",
                      "transaction_location_pid": "1",
                    },
                    "pid": "loan1",
                  },
                ]
              }
            >
              <TableBody
                as="tbody"
              >
                <tbody
                  className=""
                >
                  <TableRow
                    as="tr"
                    cellAs="td"
                    data-test="loan1"
                    key="loan1"
                  >
                    <tr
                      className=""
                      data-test="loan1"
                    >
                      <TableCell
                        as="td"
                        data-label="Loan ID"
                        data-test="0-loan1"
                        key="0-loan1"
                      >
                        <td
                          className=""
                          data-label="Loan ID"
                          data-test="0-loan1"
                        >
                          <Link
                            data-test="loanid-1"
                            to="loan/loanid-1"
                          />
                        </td>
                      </TableCell>
                      <TableCell
                        as="td"
                        data-label="Patron"
                        data-test="1-loan1"
                        key="1-loan1"
                      >
                        <td
                          className=""
                          data-label="Patron"
                          data-test="1-loan1"
                        >
                          <Link
                            to="patron/1"
                          />
                        </td>
                      </TableCell>
                      <TableCell
                        as="td"
                        data-label="Request start date"
                        data-test="2-loan1"
                        key="2-loan1"
                      >
                        <td
                          className=""
                          data-label="Request start date"
                          data-test="2-loan1"
                        >
                          2018-06-28
                        </td>
                      </TableCell>
                      <TableCell
                        as="td"
                        data-label="Request end date"
                        data-test="3-loan1"
                        key="3-loan1"
                      >
                        <td
                          className=""
                          data-label="Request end date"
                          data-test="3-loan1"
                        >
                          2019-06-28
                        </td>
                      </TableCell>
                    </tr>
                  </TableRow>
                </tbody>
              </TableBody>
            </ResultsTableBody>
            <ResultsTableFooter
              allRowsNumber={2}
              columnsNumber={4}
              currentPage={1}
              paginationComponent={null}
              seeAllComponent={
                <SeeAllButton
                  disabled={false}
                  fluid={false}
                  to="/backoffice/loans?q=(document_pid:111 AND state:(PENDING))"
                />
              }
              showAllResults={false}
              showMaxRows={1}
            >
              <TableFooter
                as="tfoot"
                data-test="footer"
                fullWidth={true}
              >
                <TableHeader
                  as="tfoot"
                  data-test="footer"
                  fullWidth={true}
                >
                  <tfoot
                    className="full-width"
                    data-test="footer"
                  >
                    <TableRow
                      as="tr"
                      cellAs="td"
                    >
                      <tr
                        className=""
                      >
                        <TableHeaderCell
                          as="th"
                          colSpan={5}
                          textAlign="right"
                        >
                          <TableCell
                            as="th"
                            className=""
                            colSpan={5}
                            textAlign="right"
                          >
                            <th
                              className="right aligned"
                              colSpan={5}
                            >
                              <span
                                className="results-table-compact-summary"
                              >
                                Showing entries 
                                1
                                -
                                1
                                 of 
                                2
                                 
                              </span>
                              <span>
                                <SeeAllButton
                                  disabled={false}
                                  fluid={false}
                                  to="/backoffice/loans?q=(document_pid:111 AND state:(PENDING))"
                                >
                                  <Button
                                    as={
                                      Object {
                                        "$$typeof": Symbol(react.forward_ref),
                                        "displayName": "Link",
                                        "propTypes": Object {
                                          "innerRef": [MockFunction] {
                                            "calls": Array [
                                              Array [
                                                Object {
                                                  "children": "loanid-1",
                                                  "data-test": "loanid-1",
                                                  "to": "loan/loanid-1",
                                                },
                                                "innerRef",
                                                "Link",
                                                "prop",
                                                null,
                                                "SECRET_DO_NOT_PASS_THIS_OR_YOU_WILL_BE_FIRED",
                                              ],
                                              Array [
                                                Object {
                                                  "children": undefined,
                                                  "to": "patron/1",
                                                },
                                                "innerRef",
                                                "Link",
                                                "prop",
                                                null,
                                                "SECRET_DO_NOT_PASS_THIS_OR_YOU_WILL_BE_FIRED",
                                              ],
                                              Array [
                                                Object {
                                                  "children": "loanid-2",
                                                  "data-test": "loanid-2",
                                                  "to": "loan/loanid-2",
                                                },
                                                "innerRef",
                                                "Link",
                                                "prop",
                                                null,
                                                "SECRET_DO_NOT_PASS_THIS_OR_YOU_WILL_BE_FIRED",
                                              ],
                                              Array [
                                                Object {
                                                  "children": undefined,
                                                  "to": "patron/1",
                                                },
                                                "innerRef",
                                                "Link",
                                                "prop",
                                                null,
                                                "SECRET_DO_NOT_PASS_THIS_OR_YOU_WILL_BE_FIRED",
                                              ],
                                              Array [
                                                Object {
                                                  "children": "loanid-1",
                                                  "data-test": "loanid-1",
                                                  "to": "loan/loanid-1",
                                                },
                                                "innerRef",
                                                "Link",
                                                "prop",
                                                null,
                                                "SECRET_DO_NOT_PASS_THIS_OR_YOU_WILL_BE_FIRED",
                                              ],
                                              Array [
                                                Object {
                                                  "children": undefined,
                                                  "to": "patron/1",
                                                },
                                                "innerRef",
                                                "Link",
                                                "prop",
                                                null,
                                                "SECRET_DO_NOT_PASS_THIS_OR_YOU_WILL_BE_FIRED",
                                              ],
                                              Array [
                                                Object {
                                                  "aria-pressed": undefined,
                                                  "children": Array [
                                                    "See all",
                                                    false,
                                                    false,
                                                  ],
                                                  "className": "ui tiny button",
                                                  "disabled": undefined,
                                                  "onClick": [Function],
                                                  "role": "button",
                                                  "tabIndex": undefined,
                                                  "to": "/backoffice/loans?q=(document_pid:111 AND state:(PENDING))",
                                                },
                                                "innerRef",
                                                "Link",
                                                "prop",
                                                null,
                                                "SECRET_DO_NOT_PASS_THIS_OR_YOU_WILL_BE_FIRED",
                                              ],
                                              Array [
                                                Object {
                                                  "aria-pressed": undefined,
                                                  "children": Array [
                                                    "See all",
                                                    false,
                                                    false,
                                                  ],
                                                  "className": "ui tiny button",
                                                  "disabled": undefined,
                                                  "onClick": [Function],
                                                  "role": "button",
                                                  "tabIndex": undefined,
                                                  "to": "/backoffice/loans?q=(document_pid:111 AND state:(PENDING))",
                                                },
                                                "innerRef",
                                                "Link",
                                                "prop",
                                                null,
                                                "SECRET_DO_NOT_PASS_THIS_OR_YOU_WILL_BE_FIRED",
                                              ],
                                            ],
                                            "results": Array [
                                              Object {
                                                "type": "return",
                                                "value": undefined,
                                              },
                                              Object {
                                                "type": "return",
                                                "value": undefined,
                                              },
                                              Object {
                                                "type": "return",
                                                "value": undefined,
                                              },
                                              Object {
                                                "type": "return",
                                                "value": undefined,
                                              },
                                              Object {
                                                "type": "return",
                                                "value": undefined,
                                              },
                                              Object {
                                                "type": "return",
                                                "value": undefined,
                                              },
                                              Object {
                                                "type": "return",
                                                "value": undefined,
                                              },
                                              Object {
                                                "type": "return",
                                                "value": undefined,
                                              },
                                            ],
                                          },
                                          "onClick": [MockFunction] {
                                            "calls": Array [
                                              Array [
                                                Object {
                                                  "children": "loanid-1",
                                                  "data-test": "loanid-1",
                                                  "to": "loan/loanid-1",
                                                },
                                                "onClick",
                                                "Link",
                                                "prop",
                                                null,
                                                "SECRET_DO_NOT_PASS_THIS_OR_YOU_WILL_BE_FIRED",
                                              ],
                                              Array [
                                                Object {
                                                  "children": undefined,
                                                  "to": "patron/1",
                                                },
                                                "onClick",
                                                "Link",
                                                "prop",
                                                null,
                                                "SECRET_DO_NOT_PASS_THIS_OR_YOU_WILL_BE_FIRED",
                                              ],
                                              Array [
                                                Object {
                                                  "children": "loanid-2",
                                                  "data-test": "loanid-2",
                                                  "to": "loan/loanid-2",
                                                },
                                                "onClick",
                                                "Link",
                                                "prop",
                                                null,
                                                "SECRET_DO_NOT_PASS_THIS_OR_YOU_WILL_BE_FIRED",
                                              ],
                                              Array [
                                                Object {
                                                  "children": undefined,
                                                  "to": "patron/1",
                                                },
                                                "onClick",
                                                "Link",
                                                "prop",
                                                null,
                                                "SECRET_DO_NOT_PASS_THIS_OR_YOU_WILL_BE_FIRED",
                                              ],
                                              Array [
                                                Object {
                                                  "children": "loanid-1",
                                                  "data-test": "loanid-1",
                                                  "to": "loan/loanid-1",
                                                },
                                                "onClick",
                                                "Link",
                                                "prop",
                                                null,
                                                "SECRET_DO_NOT_PASS_THIS_OR_YOU_WILL_BE_FIRED",
                                              ],
                                              Array [
                                                Object {
                                                  "children": undefined,
                                                  "to": "patron/1",
                                                },
                                                "onClick",
                                                "Link",
                                                "prop",
                                                null,
                                                "SECRET_DO_NOT_PASS_THIS_OR_YOU_WILL_BE_FIRED",
                                              ],
                                              Array [
                                                Object {
                                                  "aria-pressed": undefined,
                                                  "children": Array [
                                                    "See all",
                                                    false,
                                                    false,
                                                  ],
                                                  "className": "ui tiny button",
                                                  "disabled": undefined,
                                                  "onClick": [Function],
                                                  "role": "button",
                                                  "tabIndex": undefined,
                                                  "to": "/backoffice/loans?q=(document_pid:111 AND state:(PENDING))",
                                                },
                                                "onClick",
                                                "Link",
                                                "prop",
                                                null,
                                                "SECRET_DO_NOT_PASS_THIS_OR_YOU_WILL_BE_FIRED",
                                              ],
                                              Array [
                                                Object {
                                                  "aria-pressed": undefined,
                                                  "children": Array [
                                                    "See all",
                                                    false,
                                                    false,
                                                  ],
                                                  "className": "ui tiny button",
                                                  "disabled": undefined,
                                                  "onClick": [Function],
                                                  "role": "button",
                                                  "tabIndex": undefined,
                                                  "to": "/backoffice/loans?q=(document_pid:111 AND state:(PENDING))",
                                                },
                                                "onClick",
                                                "Link",
                                                "prop",
                                                null,
                                                "SECRET_DO_NOT_PASS_THIS_OR_YOU_WILL_BE_FIRED",
                                              ],
                                            ],
                                            "results": Array [
                                              Object {
                                                "type": "return",
                                                "value": undefined,
                                              },
                                              Object {
                                                "type": "return",
                                                "value": undefined,
                                              },
                                              Object {
                                                "type": "return",
                                                "value": undefined,
                                              },
                                              Object {
                                                "type": "return",
                                                "value": undefined,
                                              },
                                              Object {
                                                "type": "return",
                                                "value": undefined,
                                              },
                                              Object {
                                                "type": "return",
                                                "value": undefined,
                                              },
                                              Object {
                                                "type": "return",
                                                "value": undefined,
                                              },
                                              Object {
                                                "type": "return",
                                                "value": undefined,
                                              },
                                            ],
                                          },
                                          "replace": [MockFunction] {
                                            "calls": Array [
                                              Array [
                                                Object {
                                                  "children": "loanid-1",
                                                  "data-test": "loanid-1",
                                                  "to": "loan/loanid-1",
                                                },
                                                "replace",
                                                "Link",
                                                "prop",
                                                null,
                                                "SECRET_DO_NOT_PASS_THIS_OR_YOU_WILL_BE_FIRED",
                                              ],
                                              Array [
                                                Object {
                                                  "children": undefined,
                                                  "to": "patron/1",
                                                },
                                                "replace",
                                                "Link",
                                                "prop",
                                                null,
                                                "SECRET_DO_NOT_PASS_THIS_OR_YOU_WILL_BE_FIRED",
                                              ],
                                              Array [
                                                Object {
                                                  "children": "loanid-2",
                                                  "data-test": "loanid-2",
                                                  "to": "loan/loanid-2",
                                                },
                                                "replace",
                                                "Link",
                                                "prop",
                                                null,
                                                "SECRET_DO_NOT_PASS_THIS_OR_YOU_WILL_BE_FIRED",
                                              ],
                                              Array [
                                                Object {
                                                  "children": undefined,
                                                  "to": "patron/1",
                                                },
                                                "replace",
                                                "Link",
                                                "prop",
                                                null,
                                                "SECRET_DO_NOT_PASS_THIS_OR_YOU_WILL_BE_FIRED",
                                              ],
                                              Array [
                                                Object {
                                                  "children": "loanid-1",
                                                  "data-test": "loanid-1",
                                                  "to": "loan/loanid-1",
                                                },
                                                "replace",
                                                "Link",
                                                "prop",
                                                null,
                                                "SECRET_DO_NOT_PASS_THIS_OR_YOU_WILL_BE_FIRED",
                                              ],
                                              Array [
                                                Object {
                                                  "children": undefined,
                                                  "to": "patron/1",
                                                },
                                                "replace",
                                                "Link",
                                                "prop",
                                                null,
                                                "SECRET_DO_NOT_PASS_THIS_OR_YOU_WILL_BE_FIRED",
                                              ],
                                              Array [
                                                Object {
                                                  "aria-pressed": undefined,
                                                  "children": Array [
                                                    "See all",
                                                    false,
                                                    false,
                                                  ],
                                                  "className": "ui tiny button",
                                                  "disabled": undefined,
                                                  "onClick": [Function],
                                                  "role": "button",
                                                  "tabIndex": undefined,
                                                  "to": "/backoffice/loans?q=(document_pid:111 AND state:(PENDING))",
                                                },
                                                "replace",
                                                "Link",
                                                "prop",
                                                null,
                                                "SECRET_DO_NOT_PASS_THIS_OR_YOU_WILL_BE_FIRED",
                                              ],
                                              Array [
                                                Object {
                                                  "aria-pressed": undefined,
                                                  "children": Array [
                                                    "See all",
                                                    false,
                                                    false,
                                                  ],
                                                  "className": "ui tiny button",
                                                  "disabled": undefined,
                                                  "onClick": [Function],
                                                  "role": "button",
                                                  "tabIndex": undefined,
                                                  "to": "/backoffice/loans?q=(document_pid:111 AND state:(PENDING))",
                                                },
                                                "replace",
                                                "Link",
                                                "prop",
                                                null,
                                                "SECRET_DO_NOT_PASS_THIS_OR_YOU_WILL_BE_FIRED",
                                              ],
                                            ],
                                            "results": Array [
                                              Object {
                                                "type": "return",
                                                "value": undefined,
                                              },
                                              Object {
                                                "type": "return",
                                                "value": undefined,
                                              },
                                              Object {
                                                "type": "return",
                                                "value": undefined,
                                              },
                                              Object {
                                                "type": "return",
                                                "value": undefined,
                                              },
                                              Object {
                                                "type": "return",
                                                "value": undefined,
                                              },
                                              Object {
                                                "type": "return",
                                                "value": undefined,
                                              },
                                              Object {
                                                "type": "return",
                                                "value": undefined,
                                              },
                                              Object {
                                                "type": "return",
                                                "value": undefined,
                                              },
                                            ],
                                          },
                                          "target": [MockFunction] {
                                            "calls": Array [
                                              Array [
                                                Object {
                                                  "children": "loanid-1",
                                                  "data-test": "loanid-1",
                                                  "to": "loan/loanid-1",
                                                },
                                                "target",
                                                "Link",
                                                "prop",
                                                null,
                                                "SECRET_DO_NOT_PASS_THIS_OR_YOU_WILL_BE_FIRED",
                                              ],
                                              Array [
                                                Object {
                                                  "children": undefined,
                                                  "to": "patron/1",
                                                },
                                                "target",
                                                "Link",
                                                "prop",
                                                null,
                                                "SECRET_DO_NOT_PASS_THIS_OR_YOU_WILL_BE_FIRED",
                                              ],
                                              Array [
                                                Object {
                                                  "children": "loanid-2",
                                                  "data-test": "loanid-2",
                                                  "to": "loan/loanid-2",
                                                },
                                                "target",
                                                "Link",
                                                "prop",
                                                null,
                                                "SECRET_DO_NOT_PASS_THIS_OR_YOU_WILL_BE_FIRED",
                                              ],
                                              Array [
                                                Object {
                                                  "children": undefined,
                                                  "to": "patron/1",
                                                },
                                                "target",
                                                "Link",
                                                "prop",
                                                null,
                                                "SECRET_DO_NOT_PASS_THIS_OR_YOU_WILL_BE_FIRED",
                                              ],
                                              Array [
                                                Object {
                                                  "children": "loanid-1",
                                                  "data-test": "loanid-1",
                                                  "to": "loan/loanid-1",
                                                },
                                                "target",
                                                "Link",
                                                "prop",
                                                null,
                                                "SECRET_DO_NOT_PASS_THIS_OR_YOU_WILL_BE_FIRED",
                                              ],
                                              Array [
                                                Object {
                                                  "children": undefined,
                                                  "to": "patron/1",
                                                },
                                                "target",
                                                "Link",
                                                "prop",
                                                null,
                                                "SECRET_DO_NOT_PASS_THIS_OR_YOU_WILL_BE_FIRED",
                                              ],
                                              Array [
                                                Object {
                                                  "aria-pressed": undefined,
                                                  "children": Array [
                                                    "See all",
                                                    false,
                                                    false,
                                                  ],
                                                  "className": "ui tiny button",
                                                  "disabled": undefined,
                                                  "onClick": [Function],
                                                  "role": "button",
                                                  "tabIndex": undefined,
                                                  "to": "/backoffice/loans?q=(document_pid:111 AND state:(PENDING))",
                                                },
                                                "target",
                                                "Link",
                                                "prop",
                                                null,
                                                "SECRET_DO_NOT_PASS_THIS_OR_YOU_WILL_BE_FIRED",
                                              ],
                                              Array [
                                                Object {
                                                  "aria-pressed": undefined,
                                                  "children": Array [
                                                    "See all",
                                                    false,
                                                    false,
                                                  ],
                                                  "className": "ui tiny button",
                                                  "disabled": undefined,
                                                  "onClick": [Function],
                                                  "role": "button",
                                                  "tabIndex": undefined,
                                                  "to": "/backoffice/loans?q=(document_pid:111 AND state:(PENDING))",
                                                },
                                                "target",
                                                "Link",
                                                "prop",
                                                null,
                                                "SECRET_DO_NOT_PASS_THIS_OR_YOU_WILL_BE_FIRED",
                                              ],
                                            ],
                                            "results": Array [
                                              Object {
                                                "type": "return",
                                                "value": undefined,
                                              },
                                              Object {
                                                "type": "return",
                                                "value": undefined,
                                              },
                                              Object {
                                                "type": "return",
                                                "value": undefined,
                                              },
                                              Object {
                                                "type": "return",
                                                "value": undefined,
                                              },
                                              Object {
                                                "type": "return",
                                                "value": undefined,
                                              },
                                              Object {
                                                "type": "return",
                                                "value": undefined,
                                              },
                                              Object {
                                                "type": "return",
                                                "value": undefined,
                                              },
                                              Object {
                                                "type": "return",
                                                "value": undefined,
                                              },
                                            ],
                                          },
                                          "to": [MockFunction] {
                                            "calls": Array [
                                              Array [
                                                Object {
                                                  "children": "loanid-1",
                                                  "data-test": "loanid-1",
                                                  "to": "loan/loanid-1",
                                                },
                                                "to",
                                                "Link",
                                                "prop",
                                                null,
                                                "SECRET_DO_NOT_PASS_THIS_OR_YOU_WILL_BE_FIRED",
                                              ],
                                              Array [
                                                Object {
                                                  "children": undefined,
                                                  "to": "patron/1",
                                                },
                                                "to",
                                                "Link",
                                                "prop",
                                                null,
                                                "SECRET_DO_NOT_PASS_THIS_OR_YOU_WILL_BE_FIRED",
                                              ],
                                              Array [
                                                Object {
                                                  "children": "loanid-2",
                                                  "data-test": "loanid-2",
                                                  "to": "loan/loanid-2",
                                                },
                                                "to",
                                                "Link",
                                                "prop",
                                                null,
                                                "SECRET_DO_NOT_PASS_THIS_OR_YOU_WILL_BE_FIRED",
                                              ],
                                              Array [
                                                Object {
                                                  "children": undefined,
                                                  "to": "patron/1",
                                                },
                                                "to",
                                                "Link",
                                                "prop",
                                                null,
                                                "SECRET_DO_NOT_PASS_THIS_OR_YOU_WILL_BE_FIRED",
                                              ],
                                              Array [
                                                Object {
                                                  "children": "loanid-1",
                                                  "data-test": "loanid-1",
                                                  "to": "loan/loanid-1",
                                                },
                                                "to",
                                                "Link",
                                                "prop",
                                                null,
                                                "SECRET_DO_NOT_PASS_THIS_OR_YOU_WILL_BE_FIRED",
                                              ],
                                              Array [
                                                Object {
                                                  "children": undefined,
                                                  "to": "patron/1",
                                                },
                                                "to",
                                                "Link",
                                                "prop",
                                                null,
                                                "SECRET_DO_NOT_PASS_THIS_OR_YOU_WILL_BE_FIRED",
                                              ],
                                              Array [
                                                Object {
                                                  "aria-pressed": undefined,
                                                  "children": Array [
                                                    "See all",
                                                    false,
                                                    false,
                                                  ],
                                                  "className": "ui tiny button",
                                                  "disabled": undefined,
                                                  "onClick": [Function],
                                                  "role": "button",
                                                  "tabIndex": undefined,
                                                  "to": "/backoffice/loans?q=(document_pid:111 AND state:(PENDING))",
                                                },
                                                "to",
                                                "Link",
                                                "prop",
                                                null,
                                                "SECRET_DO_NOT_PASS_THIS_OR_YOU_WILL_BE_FIRED",
                                              ],
                                              Array [
                                                Object {
                                                  "aria-pressed": undefined,
                                                  "children": Array [
                                                    "See all",
                                                    false,
                                                    false,
                                                  ],
                                                  "className": "ui tiny button",
                                                  "disabled": undefined,
                                                  "onClick": [Function],
                                                  "role": "button",
                                                  "tabIndex": undefined,
                                                  "to": "/backoffice/loans?q=(document_pid:111 AND state:(PENDING))",
                                                },
                                                "to",
                                                "Link",
                                                "prop",
                                                null,
                                                "SECRET_DO_NOT_PASS_THIS_OR_YOU_WILL_BE_FIRED",
                                              ],
                                            ],
                                            "results": Array [
                                              Object {
                                                "type": "return",
                                                "value": undefined,
                                              },
                                              Object {
                                                "type": "return",
                                                "value": undefined,
                                              },
                                              Object {
                                                "type": "return",
                                                "value": undefined,
                                              },
                                              Object {
                                                "type": "return",
                                                "value": undefined,
                                              },
                                              Object {
                                                "type": "return",
                                                "value": undefined,
                                              },
                                              Object {
                                                "type": "return",
                                                "value": undefined,
                                              },
                                              Object {
                                                "type": "return",
                                                "value": undefined,
                                              },
                                              Object {
                                                "type": "return",
                                                "value": undefined,
                                              },
                                            ],
                                          },
                                        },
                                        "render": [MockFunction] {
                                          "calls": Array [
                                            Array [
                                              Object {
                                                "children": "loanid-1",
                                                "data-test": "loanid-1",
                                                "to": "loan/loanid-1",
                                              },
                                              null,
                                            ],
                                            Array [
                                              Object {
                                                "children": undefined,
                                                "to": "patron/1",
                                              },
                                              null,
                                            ],
                                            Array [
                                              Object {
                                                "children": "loanid-2",
                                                "data-test": "loanid-2",
                                                "to": "loan/loanid-2",
                                              },
                                              null,
                                            ],
                                            Array [
                                              Object {
                                                "children": undefined,
                                                "to": "patron/1",
                                              },
                                              null,
                                            ],
                                            Array [
                                              Object {
                                                "children": "loanid-1",
                                                "data-test": "loanid-1",
                                                "to": "loan/loanid-1",
                                              },
                                              null,
                                            ],
                                            Array [
                                              Object {
                                                "children": undefined,
                                                "to": "patron/1",
                                              },
                                              null,
                                            ],
                                            Array [
                                              Object {
                                                "aria-pressed": undefined,
                                                "children": Array [
                                                  "See all",
                                                  false,
                                                  false,
                                                ],
                                                "className": "ui tiny button",
                                                "disabled": undefined,
                                                "onClick": [Function],
                                                "role": "button",
                                                "tabIndex": undefined,
                                                "to": "/backoffice/loans?q=(document_pid:111 AND state:(PENDING))",
                                              },
                                              [Function],
                                            ],
                                          ],
                                          "results": Array [
                                            Object {
                                              "type": "return",
                                              "value": undefined,
                                            },
                                            Object {
                                              "type": "return",
                                              "value": undefined,
                                            },
                                            Object {
                                              "type": "return",
                                              "value": undefined,
                                            },
                                            Object {
                                              "type": "return",
                                              "value": undefined,
                                            },
                                            Object {
                                              "type": "return",
                                              "value": undefined,
                                            },
                                            Object {
                                              "type": "return",
                                              "value": undefined,
                                            },
                                            Object {
                                              "type": "return",
                                              "value": undefined,
                                            },
                                          ],
                                        },
                                      }
                                    }
                                    disabled={false}
                                    fluid={false}
                                    size="tiny"
                                    to="/backoffice/loans?q=(document_pid:111 AND state:(PENDING))"
                                  >
                                    <Ref
                                      innerRef={
                                        Object {
                                          "current": null,
                                        }
                                      }
                                    >
                                      <RefForward
                                        innerRef={
                                          Object {
                                            "current": null,
                                          }
                                        }
                                      >
                                        <Link
                                          className="ui tiny button"
                                          onClick={[Function]}
                                          role="button"
                                          to="/backoffice/loans?q=(document_pid:111 AND state:(PENDING))"
                                        />
                                      </RefForward>
                                    </Ref>
                                  </Button>
                                </SeeAllButton>
                              </span>
                              <span />
                            </th>
                          </TableCell>
                        </TableHeaderCell>
                      </tr>
                    </TableRow>
                  </tfoot>
                </TableHeader>
              </TableFooter>
            </ResultsTableFooter>
          </table>
        </Table>
      </ResultsTable>
    </Error>
  </Loader>
</DocumentPendingLoans>
`;
